--- a/Climate Analysis.ipynb
+++ b/Climate Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,8 @@
     "import pandas as pd\n",
     "\n",
     "# other dependencies\n",
-    "import datetime as dt"
+    "import datetime as dt\n",
+    "from dateutil.relativedelta import relativedelta"
    ]
   },
   {
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,12 +38,13 @@
     "import sqlalchemy\n",
     "from sqlalchemy.ext.automap import automap_base\n",
     "from sqlalchemy.orm import Session\n",
-    "from sqlalchemy import create_engine, func"
+    "from sqlalchemy import create_engine, func\n",
+    "from sqlalchemy.sql import select"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +74,7 @@
        "['measurement', 'station']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,101 +114,397 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Design a query to retrieve the last 12 months of precipitation data and plot the results\n",
+    "\n",
+    "# Calculate the date 1 year ago from the last data point in the database\n",
+    "# query for the latest date\n",
+    "latest_date_max = session.query(func.max(Measurement.date)).scalar()\n",
+    "# convert the latest date to a datetime object\n",
+    "latest_date = dt.datetime.strptime(latest_date_max, '%Y-%m-%d').date()\n",
+    "# use timedelta to find the date 1 year ago\n",
+    "year_ago = latest_date - dt.timedelta(days=365)\n",
+    "\n",
+    "# Create SQL query that will store the dates between year_ago and latest_date \n",
+    "from sqlalchemy import between\n",
+    "precipitation_query = select([Measurement.date, Measurement.prcp]).\\\n",
+    "where(between(Measurement.date, year_ago,latest_date))\n",
+    "\n",
+    "# Store the query values into a data frame and set the index as the date\n",
+    "conn = engine.connect()\n",
+    "precipitation_df = pd.read_sql(precipitation_query, conn)\n",
+    "precipitation_df = precipitation_df.set_index('date')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prcp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>2021.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>0.177279</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.461190</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.020000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>0.130000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>6.700000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "('2017-08-23')"
+       "              prcp\n",
+       "count  2021.000000\n",
+       "mean      0.177279\n",
+       "std       0.461190\n",
+       "min       0.000000\n",
+       "25%       0.000000\n",
+       "50%       0.020000\n",
+       "75%       0.130000\n",
+       "max       6.700000"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Design a query to retrieve the last 12 months of precipitation data and plot the results\n",
-    "conn = engine.connect()\n",
-    "df = pd.read_sql(\"SELECT date,prcp FROM Measurement\", conn)\n",
-    "df\n",
+    "# Use Pandas to calcualte the summary statistics for the precipitation data\n",
+    "precipitation_summary_df = precipitation_df.describe()\n",
     "\n",
-    "# Calculate the date 1 year ago from the last data point in the database\n",
-    "# query for the latest date\n",
-    "latest_date= session.query(Measurement.date).order_by(Measurement.date.desc()).first()\n",
-    "# create a time delta of one year\n",
-    "\n",
-    "# create a time delta of one year to get the \n",
-    "# Perform a query to retrieve the data and precipitation scores\n",
-    "\n",
-    "# Save the query results as a Pandas DataFrame and set the index to the date column\n",
-    "\n",
-    "# Sort the dataframe by date\n",
-    "\n",
-    "# Use Pandas Plotting with Matplotlib to plot the data\n"
+    "# Output to JN window\n",
+    "precipitation_summary_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 172,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 9 stations in the dataset.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Use Pandas to calcualte the summary statistics for the precipitation data"
+    "# Count the number of unique stations\n",
+    "number_of_stations = session.query(Measurement.station).group_by(Measurement.station).count()\n",
+    "\n",
+    "print(f\"There are {number_of_stations} stations in the dataset.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 187,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Design a query to show how many stations are available in this dataset?\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>station</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>USC00519281</td>\n",
+       "      <td>2772</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2724</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>USC00513117</td>\n",
+       "      <td>2709</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>USC00519523</td>\n",
+       "      <td>2669</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>USC00516128</td>\n",
+       "      <td>2612</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>USC00514830</td>\n",
+       "      <td>2202</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>USC00511918</td>\n",
+       "      <td>1979</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>USC00517948</td>\n",
+       "      <td>1372</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>USC00518838</td>\n",
+       "      <td>511</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       station  count\n",
+       "0  USC00519281   2772\n",
+       "1  USC00519397   2724\n",
+       "2  USC00513117   2709\n",
+       "3  USC00519523   2669\n",
+       "4  USC00516128   2612\n",
+       "5  USC00514830   2202\n",
+       "6  USC00511918   1979\n",
+       "7  USC00517948   1372\n",
+       "8  USC00518838    511"
+      ]
+     },
+     "execution_count": 187,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# What are the most active stations? (i.e. what stations have the most rows)?\n",
-    "# List the stations and the counts in descending order.\n"
+    "# List the stations and the counts in descending order.\n",
+    "\n",
+    "# Design a query to show how many stations are available in this dataset?\n",
+    "station_query = select([Measurement.station, func.count(Measurement.station)])\\\n",
+    ".group_by(Measurement.station).order_by(func.count(Measurement.station).desc())\n",
+    "\n",
+    "# Store the query in a dataframe and output to JN\n",
+    "station_count_df = pd.read_sql(station_query, conn)\n",
+    "station_count_df = station_count_df.rename(columns = {\"count_1\" : \"count\"})\n",
+    "\n",
+    "# output to JN\n",
+    "station_count_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 200,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAX, MIN, and AVG temperature for USC00519397 station:\n",
+      "MAX: 87.0\n",
+      "MIN: 56.0\n",
+      "AVG: 74.6\n"
+     ]
+    }
+   ],
    "source": [
     "# Using the station id from the previous query, calculate the lowest temperature recorded, \n",
-    "# highest temperature recorded, and average temperature most active station?\n"
+    "# highest temperature recorded, and average temperature most active station?\n",
+    "\n",
+    "# get the station tag of the station with the most amount of records\n",
+    "station_tag = station_count_df.iloc[1,0]\n",
+    "\n",
+    "# Query for all the temperature data\n",
+    "station_query = select([Measurement.tobs]).where(Measurement.station == station_tag)\n",
+    "\n",
+    "max_station_temp_df = pd.read_sql(station_query,conn)\n",
+    "max_temp = max(max_station_temp_df[\"tobs\"])\n",
+    "min_temp = min(max_station_temp_df[\"tobs\"])\n",
+    "avg_temp = round(max_station_temp_df[\"tobs\"].mean(), 1)\n",
+    "\n",
+    "# print stats to JN\n",
+    "print(f\"MAX, MIN, and AVG temperature for {station_tag} station:\")\n",
+    "print(f\"MAX: {max_temp}\")\n",
+    "print(f\"MIN: {min_temp}\")\n",
+    "print(f\"AVG: {avg_temp}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 224,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>tobs</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2016-08-23</td>\n",
+       "      <td>81.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2016-08-24</td>\n",
+       "      <td>79.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016-08-25</td>\n",
+       "      <td>80.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016-08-26</td>\n",
+       "      <td>79.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2016-08-27</td>\n",
+       "      <td>77.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         date  tobs\n",
+       "0  2016-08-23  81.0\n",
+       "1  2016-08-24  79.0\n",
+       "2  2016-08-25  80.0\n",
+       "3  2016-08-26  79.0\n",
+       "4  2016-08-27  77.0"
+      ]
+     },
+     "execution_count": 224,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Choose the station with the highest number of temperature observations.\n",
-    "# Query the last 12 months of temperature observation data for this station and plot the results as a histogram\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![precipitation](Images/station-histogram.png)"
+    "# Query the last 12 months of temperature observation data for this station and plot the results as a histogram\n",
+    "from sqlalchemy import and_\n",
+    "\n",
+    "# create a query \n",
+    "temperature_query = select([Measurement.date, Measurement.tobs]).\\\n",
+    "where(and_(Measurement.station == station_tag, between(Measurement.date, year_ago,latest_date)))\n",
+    "\n",
+    "# \n",
+    "top_station_temps_df = pd.read_sql(temperature_query, conn)\n",
+    "\n",
+    "# print to JN\n",
+    "top_station_temps_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 210,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(62.0, 69.57142857142857, 74.0)]\n"
+     ]
+    }
+   ],
    "source": [
     "# This function called `calc_temps` will accept start date and end date in the format '%Y-%m-%d' \n",
     "# and return the minimum, average, and maximum temperatures for that range of dates\n",
@@ -230,12 +528,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 223,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAX, MIN, and AVG temperature for USC00519397 station between 2015-2016:\n",
+      "MAX: (56.0, 74.43899317406144, 86.0)\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-223-c55ffa271026>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"MAX, MIN, and AVG temperature for {station_tag} station between 2015-2016:\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"MAX: {previous_year_stats[0]}\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"MIN: {previous_year_stats[1]}\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"AVG: {previous_year_stats[2]}\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "# Use your previous function `calc_temps` to calculate the tmin, tavg, and tmax \n",
-    "# for your trip using the previous year's data for those same dates.\n"
+    "# for your trip using the previous year's data for those same dates.\n",
+    "\n",
+    "# \n",
+    "date_2016 = latest_date - dt.timedelta(days=365)\n",
+    "year_ago_from_date_2016 = year_ago - dt.timedelta(days=365)\n",
+    "\n",
+    "# \n",
+    "previous_year_stats = calc_temps(year_ago_from_date_2016,date_2016)\n",
+    "\n",
+    "# Print to JN\n",
+    "print(f\"MAX, MIN, and AVG temperature for {station_tag} station between 2015-2016:\")\n",
+    "print(f\"MAX: {previous_year_stats[0]}\")\n",
+    "print(f\"MIN: {previous_year_stats[1]}\")\n",
+    "print(f\"AVG: {previous_year_stats[2]}\")"
    ]
   },
   {
